Finished language API + added order parameter to categories API
